don't wrap label, BlackBerry fix
git-svn-id: https://git.crowdfave.org/svn/crowdfavorite/code/wp-themes/carrington-personal/trunk@39501 546ca710-db30-0410-8887-d9dd8e66aff0

--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -1905,6 +1905,7 @@ iPad (portrait)				768
 		left: auto;
 		margin-top: 10px;
 		position: static;
+		white-space: nowrap;
 	}
 	#nav-main .menu {
 		border: 3px solid transparent;
