--- a/assets/css/media-mobile.css
+++ b/assets/css/media-mobile.css
@@ -66,6 +66,7 @@ iPad (portrait)				768
 		left: auto;
 		margin-top: 10px;
 		position: static;
+		white-space: nowrap;
 	}
 	#nav-main .menu {
 		border: 3px solid transparent;
